--- a/src/components/Container/container.css
+++ b/src/components/Container/container.css
@@ -26,3 +26,17 @@
 .users-heading h3 {
     margin: 0;
 }
+.add-person-icon {
+    height: 42px!important;
+    width: 42px!important;
+}
+svg.add-person-icon path {
+    fill: rgb(144, 144, 144);
+}
+svg.add-person-icon:hover path {
+    fill: rgb(0, 188, 213);
+}
+.add-person-icon-container {
+    height: 50px!important;
+    width: 50px!important;
+}
